--- a/server2/package.json
+++ b/server2/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.6",
     "nodemon": "^3.0.2",
@@ -19,6 +20,8 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "pg": "^8.11.3",
     "typeorm": "^0.3.19"
