--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-hover-card": "^1.0.7",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@reduxjs/toolkit": "^2.0.1",
+    "@types/jsonwebtoken": "^9.0.5",
     "axios": "^1.6.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -23,6 +25,7 @@
     "date-fns": "^3.2.0",
     "dotenv": "^16.3.1",
     "framer-motion": "^10.18.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.309.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
